// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/page/Account should match snapshot 1`] = `
<body>
  <div>
    <div>
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          个人中心
        </div>
        <div
          class="extra"
        />
      </div>
      <div
        class="css-1vouckw"
      >
        <div
          class="css-ip7bgn"
        >
          账户基本信息
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
            type="button"
          >
            <span>
              修改密码
            </span>
          </button>
        </div>
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    用户名
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    class="whitespace-pre"
                  >
                    admin
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    邮箱
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  admin@gmail.com
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    企业微信UserID
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  wx_test_id
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    手机号
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  13112341234
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row clear-padding-top css-nsnt4h"
            >
              <div
                class="label-content"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    访问令牌
                  </div>
                  <div
                    class="tips"
                  >
                    您可以在IDE工具上使用访问令牌，进行用户认证
                  </div>
                </div>
                <button
                  class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                  type="button"
                >
                  <span>
                    生成Token
                  </span>
                </button>
              </div>
              <div
                class="token-content"
              >
                <div
                  class="token-content-item"
                >
                  <span
                    class="token-content-item-label"
                  >
                    Token
                  </span>
                  <span
                    class="css-1sg2lsz"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="rect-border-wrapper css-1iiq8r2"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.333 9.333H8.44A4.002 4.002 0 0 1 .667 8a4 4 0 0 1 7.772-1.333h6.894v2.666H14V12h-2.667zm-6.666 0a1.333 1.333 0 1 0 0-2.666 1.333 1.333 0 0 0 0 2.666"
                              fill="#8A8F99"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <span
                      class="ant-typography"
                    >
                      <div
                        aria-label="复制"
                        class="ant-typography-copy"
                        role="button"
                        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                        tabindex="0"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="token-content-item"
                >
                  <span
                    class="token-content-item-label"
                  >
                    过期时间
                  </span>
                  <span
                    class="token-content-item-value"
                  >
                    2024-03-31 10:25:10
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <section
                    class="css-zupqof"
                  >
                    <form
                      class="ant-form ant-form-horizontal"
                    >
                      <div
                        class="switch-field-wrapper"
                      >
                        <div
                          class="ant-form-item css-1jlm9cy"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-no-colon"
                                title="双因素认证"
                              >
                                双因素认证
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      <div
                                        class="ant-form-item css-1jlm9cy ant-form-item-has-success"
                                      >
                                        <div
                                          class="ant-row ant-form-item-row"
                                        >
                                          <div
                                            class="ant-col ant-form-item-control"
                                          >
                                            <div
                                              class="ant-form-item-control-input"
                                            >
                                              <div
                                                class="ant-form-item-control-input-content"
                                              >
                                                <button
                                                  aria-checked="false"
                                                  class="ant-switch basic-switch-wrapper system-config-switch css-g6dhbn"
                                                  id="enabled"
                                                  role="switch"
                                                  type="button"
                                                >
                                                  <div
                                                    class="ant-switch-handle"
                                                  />
                                                  <span
                                                    class="ant-switch-inner"
                                                  >
                                                    <span
                                                      class="ant-switch-inner-checked"
                                                    />
                                                    <span
                                                      class="ant-switch-inner-unchecked"
                                                    />
                                                  </span>
                                                </button>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="config-field-wrapper"
                        hidden=""
                      >
                        <div
                          class="ant-form-item css-1jlm9cy"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-no-colon"
                                title="手机号"
                              >
                                手机号
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  13112341234
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-1jlm9cy"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-required ant-form-item-no-colon"
                                for="code"
                                title="验证码"
                              >
                                验证码
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center css-jxd35n"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px;"
                                    >
                                      <input
                                        aria-required="true"
                                        class="ant-input basic-input-wrapper css-1pd1cd5"
                                        id="code"
                                        placeholder="请输入验证码"
                                        type="text"
                                        value=""
                                      />
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <button
                                        class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                        type="button"
                                      >
                                        <span>
                                          发送验证码
                                        </span>
                                      </button>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-15d6abf"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-no-colon"
                                title=" "
                              >
                                 
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 12px;"
                                    >
                                      <button
                                        class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                        type="button"
                                      >
                                        <span>
                                          取 消
                                        </span>
                                      </button>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <button
                                        class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                                        type="submit"
                                      >
                                        <span>
                                          提 交
                                        </span>
                                      </button>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    登录设置
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  -
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test base/page/Account should match snapshot 2`] = `
<body>
  <div>
    <div>
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          个人中心
        </div>
        <div
          class="extra"
        />
      </div>
      <div
        class="css-1vouckw"
      >
        <div
          class="css-ip7bgn"
        >
          账户基本信息
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
            type="button"
          >
            <span>
              修改密码
            </span>
          </button>
        </div>
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    用户名
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    class="whitespace-pre"
                  >
                    admin
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    邮箱
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  admin@gmail.com
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    企业微信UserID
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  wx_test_id
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    手机号
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  13112341234
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row clear-padding-top css-nsnt4h"
            >
              <div
                class="label-content"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    访问令牌
                  </div>
                  <div
                    class="tips"
                  >
                    您可以在IDE工具上使用访问令牌，进行用户认证
                  </div>
                </div>
                <button
                  class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                  type="button"
                >
                  <span>
                    生成Token
                  </span>
                </button>
              </div>
              <div
                class="token-content"
              >
                <div
                  class="token-content-item"
                >
                  <span
                    class="token-content-item-label"
                  >
                    Token
                  </span>
                  <span
                    class="css-1sg2lsz"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="rect-border-wrapper css-1iiq8r2"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.333 9.333H8.44A4.002 4.002 0 0 1 .667 8a4 4 0 0 1 7.772-1.333h6.894v2.666H14V12h-2.667zm-6.666 0a1.333 1.333 0 1 0 0-2.666 1.333 1.333 0 0 0 0 2.666"
                              fill="#8A8F99"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <span
                      class="ant-typography"
                    >
                      <div
                        aria-label="复制"
                        class="ant-typography-copy"
                        role="button"
                        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                        tabindex="0"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="token-content-item"
                >
                  <span
                    class="token-content-item-label"
                  >
                    过期时间
                  </span>
                  <span
                    class="token-content-item-value"
                  >
                    2024-03-31 10:25:10
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <section
                    class="css-zupqof"
                  >
                    <form
                      class="ant-form ant-form-horizontal"
                    >
                      <div
                        class="switch-field-wrapper"
                      >
                        <div
                          class="ant-form-item css-1jlm9cy"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-no-colon"
                                title="双因素认证"
                              >
                                双因素认证
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      <div
                                        class="ant-form-item css-1jlm9cy ant-form-item-has-success"
                                      >
                                        <div
                                          class="ant-row ant-form-item-row"
                                        >
                                          <div
                                            class="ant-col ant-form-item-control"
                                          >
                                            <div
                                              class="ant-form-item-control-input"
                                            >
                                              <div
                                                class="ant-form-item-control-input-content"
                                              >
                                                <button
                                                  aria-checked="false"
                                                  class="ant-switch basic-switch-wrapper system-config-switch css-g6dhbn"
                                                  id="enabled"
                                                  role="switch"
                                                  type="button"
                                                >
                                                  <div
                                                    class="ant-switch-handle"
                                                  />
                                                  <span
                                                    class="ant-switch-inner"
                                                  >
                                                    <span
                                                      class="ant-switch-inner-checked"
                                                    />
                                                    <span
                                                      class="ant-switch-inner-unchecked"
                                                    />
                                                  </span>
                                                </button>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="config-field-wrapper"
                        hidden=""
                      >
                        <div
                          class="ant-form-item css-1jlm9cy"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-no-colon"
                                title="手机号"
                              >
                                手机号
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  13112341234
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-1jlm9cy"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-required ant-form-item-no-colon"
                                for="code"
                                title="验证码"
                              >
                                验证码
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center css-jxd35n"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px;"
                                    >
                                      <input
                                        aria-required="true"
                                        class="ant-input basic-input-wrapper css-1pd1cd5"
                                        id="code"
                                        placeholder="请输入验证码"
                                        type="text"
                                        value=""
                                      />
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <button
                                        class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                        type="button"
                                      >
                                        <span>
                                          发送验证码
                                        </span>
                                      </button>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-15d6abf"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-no-colon"
                                title=" "
                              >
                                 
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 12px;"
                                    >
                                      <button
                                        class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                        type="button"
                                      >
                                        <span>
                                          取 消
                                        </span>
                                      </button>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <button
                                        class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                                        type="submit"
                                      >
                                        <span>
                                          提 交
                                        </span>
                                      </button>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    登录设置
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  -
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  修改当前用户密码
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="oldPassword"
                        title="旧密码"
                      >
                        旧密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5"
                          >
                            <input
                              aria-required="true"
                              class="ant-input"
                              id="oldPassword"
                              placeholder="请输入旧密码"
                              type="password"
                              value=""
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="newPassword"
                        title="新密码"
                      >
                        新密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5"
                          >
                            <input
                              aria-required="true"
                              class="ant-input"
                              id="newPassword"
                              placeholder="请选择新密码"
                              type="password"
                              value=""
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="newPasswordConfirm"
                        title="确认新密码"
                      >
                        确认新密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5"
                          >
                            <input
                              aria-required="true"
                              class="ant-input"
                              id="newPasswordConfirm"
                              placeholder="请选择确认新密码"
                              type="password"
                              value=""
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`test base/page/Account should match snapshot when "getUserInfoLoading" is equal true 1`] = `
<body>
  <div>
    <div>
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          个人中心
        </div>
        <div
          class="extra"
        />
      </div>
      <div
        class="css-1vouckw"
      >
        <div
          class="css-ip7bgn"
        >
          账户基本信息
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
            type="button"
          >
            <span>
              修改密码
            </span>
          </button>
        </div>
        <div
          class="ant-spin-nested-loading"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    用户名
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    class="whitespace-pre"
                  >
                    admin
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    邮箱
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  admin@gmail.com
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    企业微信UserID
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  wx_test_id
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    手机号
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  13112341234
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-row clear-padding-top css-nsnt4h"
            >
              <div
                class="label-content"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    访问令牌
                  </div>
                  <div
                    class="tips"
                  >
                    您可以在IDE工具上使用访问令牌，进行用户认证
                  </div>
                </div>
                <button
                  class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                  type="button"
                >
                  <span>
                    生成Token
                  </span>
                </button>
              </div>
              <div
                class="token-content"
              >
                <div
                  class="token-content-item"
                >
                  <span
                    class="token-content-item-label"
                  >
                    Token
                  </span>
                  <span
                    class="css-1sg2lsz"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="rect-border-wrapper css-1iiq8r2"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.333 9.333H8.44A4.002 4.002 0 0 1 .667 8a4 4 0 0 1 7.772-1.333h6.894v2.666H14V12h-2.667zm-6.666 0a1.333 1.333 0 1 0 0-2.666 1.333 1.333 0 0 0 0 2.666"
                              fill="#8A8F99"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <span
                      class="ant-typography"
                    >
                      <div
                        aria-label="复制"
                        class="ant-typography-copy"
                        role="button"
                        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                        tabindex="0"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="token-content-item"
                >
                  <span
                    class="token-content-item-label"
                  >
                    过期时间
                  </span>
                  <span
                    class="token-content-item-value"
                  >
                    2024-03-31 10:25:10
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="ant-spin-nested-loading"
              >
                <div>
                  <div
                    aria-busy="true"
                    aria-live="polite"
                    class="ant-spin ant-spin-spinning"
                  >
                    <span
                      class="ant-spin-dot ant-spin-dot-spin"
                    >
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="ant-spin-container ant-spin-blur"
                >
                  <section
                    class="css-zupqof"
                  >
                    <form
                      class="ant-form ant-form-horizontal"
                    >
                      <div
                        class="switch-field-wrapper"
                      >
                        <div
                          class="ant-form-item css-1jlm9cy"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-no-colon"
                                title="双因素认证"
                              >
                                双因素认证
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      <div
                                        class="ant-form-item css-1jlm9cy ant-form-item-has-success"
                                      >
                                        <div
                                          class="ant-row ant-form-item-row"
                                        >
                                          <div
                                            class="ant-col ant-form-item-control"
                                          >
                                            <div
                                              class="ant-form-item-control-input"
                                            >
                                              <div
                                                class="ant-form-item-control-input-content"
                                              >
                                                <button
                                                  aria-checked="false"
                                                  class="ant-switch basic-switch-wrapper system-config-switch css-g6dhbn"
                                                  id="enabled"
                                                  role="switch"
                                                  type="button"
                                                >
                                                  <div
                                                    class="ant-switch-handle"
                                                  />
                                                  <span
                                                    class="ant-switch-inner"
                                                  >
                                                    <span
                                                      class="ant-switch-inner-checked"
                                                    />
                                                    <span
                                                      class="ant-switch-inner-unchecked"
                                                    />
                                                  </span>
                                                </button>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="config-field-wrapper"
                        hidden=""
                      >
                        <div
                          class="ant-form-item css-1jlm9cy"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-no-colon"
                                title="手机号"
                              >
                                手机号
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  13112341234
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-1jlm9cy"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-required ant-form-item-no-colon"
                                for="code"
                                title="验证码"
                              >
                                验证码
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center css-jxd35n"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 8px;"
                                    >
                                      <input
                                        aria-required="true"
                                        class="ant-input basic-input-wrapper css-1pd1cd5"
                                        id="code"
                                        placeholder="请输入验证码"
                                        type="text"
                                        value=""
                                      />
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <button
                                        class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                        type="button"
                                      >
                                        <span>
                                          发送验证码
                                        </span>
                                      </button>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-15d6abf"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                            >
                              <label
                                class="ant-form-item-no-colon"
                                title=" "
                              >
                                 
                              </label>
                            </div>
                            <div
                              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 12px;"
                                    >
                                      <button
                                        class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                        type="button"
                                      >
                                        <span>
                                          取 消
                                        </span>
                                      </button>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <button
                                        class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                                        type="submit"
                                      >
                                        <span>
                                          提 交
                                        </span>
                                      </button>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
            >
              <div
                class="ant-col ant-col-11 config-item-label"
              >
                <div
                  class="config-item-label"
                >
                  <div
                    class="title"
                  >
                    登录设置
                  </div>
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  -
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-lfzis8"
                    hidden=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
